add expanding for spots with too much text

--- a/css/style.css
+++ b/css/style.css
@@ -1347,3 +1347,8 @@
 					margin-left: 0;
 					padding: 0;
 				}
+
+/* expandable stuff */                
+    .more_text {
+      display: none;
+    }
