--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,7 +1,7 @@
 @import 'vars';
 @import 'mixins';
 @import 'font-awesome.min.css';
-@import url('http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300italic,400,400italic');
+@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300italic,400,400italic');
 
 /*
 	Photon by HTML5 UP
